--- a/pyproject.toml
+++ b/pyproject.toml
@@ -44,6 +44,7 @@ google-api-python-client = "2.86.0"
 google-auth = "2.21.0"
 google-auth-httplib2 = "0.1.0"
 google-auth-oauthlib = "1.0.0"
+channels = {extras = ["daphne"], version = "^4.0.0"}
 
 [tool.poetry.group.dev.dependencies]
 black = "23.3.0"
