--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,23 +34,11 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v3
-      - uses: actions/setup-python@v4
+      - name: Set up Poetry
+        uses: ClementWalter/poetry-action@v1
         with:
-          python-version: 3.10.8
-          cache: "pip"
-          cache-dependency-path: |
-            requirements/local.txt
-            requirements/base.txt
-      # This is a more aggresive cache.
-      # The one above caches the wheel files, but still runs the installation for them
-      # While the cache below caches the entire Python directory.
-      - name: Cache pip
-        uses: actions/cache@v3
-        with:
-          path: /opt/hostedtoolcache/Python/3.10.8/x64/ # This path is specific to Ubuntu
-          key: python-${{ hashFiles('requirements/local.txt') }}-${{ hashFiles('requirements/base.txt') }}
-      - name: Install dependencies
-        run: pip install -r requirements/local.txt
+          os: ubuntu-latest
+          python-version: ${{ matrix.python-version }}
       - name: Run isort
         uses: isort/isort-action@master
       - name: Run black
@@ -61,18 +49,3 @@ jobs:
         run: mypy --config mypy.ini src/
       - name: Run tests
         run: pytest
-
-  deploy_to_heroku:
-    runs-on: ubuntu-latest
-    needs: build
-    # The project is currently hosted on render.com
-    if: false
-    steps:
-      - uses: actions/checkout@v3
-        with:
-          fetch-depth: "0"
-      - name: Deploy to Heroku
-        env:
-          HEROKU_API_KEY: ${{ secrets.HEROKU_API_KEY }}
-          HEROKU_APP_NAME: "hacksoft-styleguide-example"
-        run: git push --force https://heroku:$HEROKU_API_KEY@git.heroku.com/$HEROKU_APP_NAME.git origin/master:master
