--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,7 +38,7 @@ jobs:
         uses: ClementWalter/poetry-action@v1
         with:
           os: ubuntu-latest
-          python-version: ${{ matrix.python-version }}
+          python-version: 3.11
       - name: Run isort
         uses: isort/isort-action@master
       - name: Run black
