--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -34,11 +34,15 @@ jobs:
         options: --health-cmd pg_isready --health-interval 10s --health-timeout 5s --health-retries 5
     steps:
       - uses: actions/checkout@v3
-      - name: Set up Poetry
-        uses: ClementWalter/poetry-action@v1
+      - uses: actions/setup-python@v4
         with:
-          os: ubuntu-latest
-          python-version: 3.11
+          python-version: "3.11"
+      - uses: Gr1N/setup-poetry@v8
+      - uses: actions/cache@v2
+        with:
+          path: ~/.cache/pypoetry/virtualenvs
+          key: ${{ runner.os }}-poetry-${{ hashFiles('poetry.lock') }}
+      
       - name: Run isort
         uses: isort/isort-action@master
       - name: Run black
