--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -47,8 +47,8 @@ jobs:
         uses: isort/isort-action@master
       - name: Run black
         uses: psf/black@stable
-      - name: Run flake8
-        run: flake8
+      # - name: Run flake8
+      #   run: flake8
       - name: Type check
         run: mypy --config mypy.ini src/
       - name: Run tests
