--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -50,6 +50,8 @@ jobs:
       # - name: Run flake8
       #   run: flake8
       - name: Type check
-        run: mypy --config mypy.ini src/
+        uses: jpetrucciani/mypy-check@master
+        with:
+          mypy_flags: '--config-file .mypy.ini'
       - name: Run tests
         run: pytest
