--- a/.github/workflows/django.yml
+++ b/.github/workflows/django.yml
@@ -38,6 +38,7 @@ jobs:
         with:
           python-version: "3.11"
       - uses: Gr1N/setup-poetry@v8
+      - run: poetry install
         env:
           POETRY_VIRTUALENVS_IN_PROJECT : true
       - uses: actions/cache@v2
@@ -50,7 +51,7 @@ jobs:
       - name: Run black
         uses: psf/black@stable
       - name: Run flake8
-        run: ./venv/bin/flake8
+        run: flake8
       - name: Type check
         run: ./venv/bin/mypy --config mypy.ini src/
       - name: Run tests
